--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,12 +21,20 @@ else()
 endif ()
 
 set(CMAKE_CXX_STANDARD 20)
-#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++20")
+
+if(NOT CMAKE_BUILD_TYPE)
+    set(CMAKE_BUILD_TYPE Release)
+endif()
+
+set(CMAKE_CXX_FLAGS "-Wall -Wextra")
+set(CMAKE_CXX_FLAGS_DEBUG "-g")
+#set(CMAKE_CXX_FLAGS_RELEASE "-O3")
 
 #add_executable(webm_unpacker
 #        main.cpp
-#        src/webm_unpacker.c)
+#        src/webm_unpacker.cpp)
 
 add_library(webm_unpacker SHARED
         src/webm_unpacker.cpp)
+
 target_link_libraries(webm_unpacker vpxgnu)
