--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,10 @@ elseif(ANDROID_32)
     link_directories(
             libvpx/lib/android/armeabi-v7a
     )
+elseif(IOS)
+    link_directories(
+            libvpx/lib/ios
+    )
 else()
     link_directories(
             libvpx/lib/osx
@@ -30,11 +34,19 @@ set(CMAKE_CXX_FLAGS "-Wall -Wextra")
 set(CMAKE_CXX_FLAGS_DEBUG "-g")
 #set(CMAKE_CXX_FLAGS_RELEASE "-O3")
 
-#add_executable(webm_unpacker
-#        main.cpp
-#        src/webm_unpacker.cpp)
 
-add_library(webm_unpacker SHARED
-        src/webm_unpacker.cpp)
-
+if (IOS)
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fembed-bitcode")
+    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fembed-bitcode")
+    set(CMAKE_OSX_ARCHITECTURES "arm64")
+    add_library(webm_unpacker STATIC
+            src/webm_unpacker.cpp
+            )
+else ()
+    add_library(webm_unpacker SHARED
+            src/webm_unpacker.cpp)
+#    add_executable(webm_unpacker
+#            main.cpp
+#            src/webm_unpacker.cpp)
+endif ()
 target_link_libraries(webm_unpacker vpxgnu)
