--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,17 +6,17 @@ include_directories(
         libvpx/include
 )
 
-if(ANDROID_64)
+if (ANDROID_64)
     link_directories(
             libvpx/lib/android/arm64-v8a
     )
-elseif(ANDROID_32)
+elseif (ANDROID_32)
     link_directories(
             libvpx/lib/android/armeabi-v7a
     )
-elseif(IOS)
+elseif (IOS)
     add_subdirectory(third/libvpx_prebuilt/gnusrc gnusrc)
-else()
+else ()
     link_directories(
             libvpx/lib/osx
     )
@@ -24,14 +24,9 @@ endif ()
 
 set(CMAKE_CXX_STANDARD 20)
 
-if(NOT CMAKE_BUILD_TYPE)
+if (NOT CMAKE_BUILD_TYPE)
     set(CMAKE_BUILD_TYPE Release)
-endif()
-
-#set(CMAKE_CXX_FLAGS "-Wall -Wextra")
-#set(CMAKE_CXX_FLAGS_DEBUG "-g")
-#set(CMAKE_CXX_FLAGS_RELEASE "-O3")
-
+endif ()
 
 if (IOS)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fembed-bitcode")
@@ -39,12 +34,16 @@ if (IOS)
     set(CMAKE_OSX_ARCHITECTURES "arm64")
     add_library(webm_unpacker SHARED
             src/webm_unpacker.cpp
-            )
+    )
 else ()
     add_library(webm_unpacker SHARED
-            src/webm_unpacker.cpp)
-#    add_executable(webm_unpacker
-#            main.cpp
-#            src/webm_unpacker.cpp)
+            src/webm_unpacker.cpp
+    )
+
+    add_executable(webm_unpacker_test
+            main.cpp
+            src/webm_unpacker.cpp
+    )
 endif ()
 target_link_libraries(webm_unpacker vpxgnu)
+target_link_libraries(webm_unpacker_test vpxgnu)
