--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,9 @@ elseif (ANDROID_32)
             libvpx/lib/android/armeabi-v7a
     )
 elseif (IOS)
+#    add_subdirectory(third/libvpx_prebuilt/gnusrc gnusrc)
+elseif (WIN32)
+#    windows 平台可能需要改下路径
     add_subdirectory(third/libvpx_prebuilt/gnusrc gnusrc)
 else ()
     link_directories(
@@ -29,11 +32,25 @@ if (NOT CMAKE_BUILD_TYPE)
 endif ()
 
 if (IOS)
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fembed-bitcode")
-    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fembed-bitcode")
+#    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fembed-bitcode")
+#    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fembed-bitcode")
+    include_directories(
+            third/libvpx_prebuilt/gnusrc
+    )
+
+    set(SRCS)
+    file(GLOB_RECURSE SRCS
+            *.c
+            *.h
+            *.cpp
+    )
+#    message("src: ${SRCS}")
+    get_filename_component(full_path_main_cpp ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp ABSOLUTE)
+    list(REMOVE_ITEM SRCS "${full_path_main_cpp}")
+
     set(CMAKE_OSX_ARCHITECTURES "arm64")
-    add_library(webm_unpacker SHARED
-            src/webm_unpacker.cpp
+    add_library(webm_unpacker STATIC
+            ${SRCS}
     )
 else ()
     add_library(webm_unpacker SHARED
@@ -44,6 +61,7 @@ else ()
             main.cpp
             src/webm_unpacker.cpp
     )
+    target_link_libraries(webm_unpacker_test vpxgnu)
+    target_link_libraries(webm_unpacker vpxgnu)
 endif ()
-target_link_libraries(webm_unpacker vpxgnu)
-target_link_libraries(webm_unpacker_test vpxgnu)
+
